<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">scanner</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="scan_error">Scanning Failed, please try again</string>

    <!-- Main -->
    <string name="title_activity_main">Home</string>

    <!-- Login Strings -->
    <string name="login_userName_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_empty_userName">Username field is empty</string>
    <string name="login_empty_password">Password field is empty</string>
    <string name="login_empty_userName_password">Username and Password fields are empty</string>

    <!-- Layout Strings -->
    <string name="error_something_wrong">Something went wrong</string>
    <string name="header_button_home">Home</string>
    <string name="footer_button_back">Back</string>
    <string name="footer_button_menu_open">Open Menu</string>
    <string name="footer_button_menu_close">Close Menu</string>
    <string name="footer_button_ok">OK</string>

    <color name="blue">#25383C</color>

    <!-- Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="font_scaling">Choose font scaling</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="big">Big</string>
    <string name="language_picker">Choose language</string>
    <string name="set_pin">new pin (5 digits)</string>
    <string name="confirm_pin">confirm new pin</string>
    <string name="pin_incorrect_size">Pin should be 5 digits long</string>
    <string name="pin_not_equal">Pincodes were not the same</string>
    <string name="temperature_perms">Only superusers can change temperatures</string>

    <!-- Login Activity -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="username_description">Your username</string>
    <string name="password_description">Your password</string>
    <string name="pin_description">Use pin</string>
    <string name="login_header">Login</string>
    <string name="use_pin">Your pin</string>

    <!-- ProductList Activity -->
    <string name="title_activity_scanner">Scanner</string>
    <string name="getProducts">download your grocery lists</string>
    <string name="Scan">Scan</string>
    <string name="product_not_found">Product not found</string>
    <string name="scanned">Scanned</string>
    <string name="already_downloaded">Your lists have already been downloaded</string>
    <string name="pay">Pay</string>
    <string name="payment_complete">inventory send to counter</string>

</resources>