<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	<ListView
			android:layout_width="wrap_content"
			android:layout_height="113dp"
			android:id="@+id/listView"
			android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_marginTop="70dp"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/login_username" android:layout_alignParentLeft="true" android:layout_marginLeft="122dp"
			android:layout_alignTop="@+id/listView" android:singleLine="false"
			android:hint="@string/username_description" android:inputType="text|textNoSuggestions"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/login_password"
			android:layout_alignLeft="@+id/login_username" android:layout_alignBottom="@+id/listView"
			android:hint="@string/password_description"
			android:inputType="textPassword"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/username"
			android:id="@+id/textView" android:layout_alignLeft="@+id/listView"
			android:layout_alignTop="@+id/listView"/>
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/password"
			android:id="@+id/gass_textView1"
			android:layout_alignLeft="@+id/listView" android:layout_alignTop="@+id/login_password"/>
	<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/log_in"
			android:id="@+id/button"
			android:background="@drawable/smooth_button"
			android:onClick="login"
			android:tag="MainActivity"
			android:layout_alignRight="@+id/login_password" android:layout_below="@+id/listView"/>
	<include android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 layout="@layout/header" android:id="@+id/include" android:layout_alignLeft="@+id/listView"
			 android:layout_alignParentTop="true"/>
	<include android:layout_width="wrap_content"
			 android:layout_height="wrap_content"
			 layout="@layout/footer" android:id="@+id/include1" android:layout_alignLeft="@+id/listView"
			 android:layout_alignParentBottom="true"/>
</RelativeLayout>